--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <!-- Footer Start -->
     <div class="footer" >
-        <p> © Aptech Learning  , <span style="color:#febf08"> NK Center </span></p>
+        <p> © Aptech Computer Education  , <span style="color:#febf08"> NK Center </span></p>
     </div>
     <!-- Footer End -->
 
